--- a/docs/后端设计文档.md
+++ b/docs/后端设计文档.md
@@ -16,6 +16,7 @@
 - Service：业务规则、状态机、冲突检测、权限校验。
 - Mapper：持久层 CRUD + 复杂查询。
 - Domain/DTO：实体与传输对象分离。
+- 逻辑删除：所有表增加 `is_deleted` 字段（0/1），业务层默认过滤 `is_deleted=0`。
 
 ## 3. 核心模块划分
 1) 权限与用户模块
@@ -45,6 +46,7 @@
   - name, email, phone
   - role (ADMIN/TEACHER/STUDENT)
   - status (ACTIVE/DISABLED)
+  - is_deleted (0/1)
   - created_at, updated_at
 
 - roles (可选，若使用配置型 RBAC)
@@ -58,6 +60,7 @@
   - capacity
   - open_time_start, open_time_end (如 08:00-22:00)
   - status (IDLE/RESERVED/IN_USE/MAINTENANCE/DISABLED)
+  - is_deleted (0/1)
   - created_at, updated_at
 
 ### 4.3 设备
@@ -66,6 +69,7 @@
   - lab_id (FK -> labs.id)
   - name, model
   - status (IDLE/RESERVED/IN_USE/MAINTENANCE/RETIRED)
+  - is_deleted (0/1)
   - created_at, updated_at
 
 ### 4.4 课程
@@ -75,6 +79,7 @@
   - student_count
   - term
   - created_by (teacher_id)
+  - is_deleted (0/1)
   - created_at, updated_at
 
 ### 4.5 预约
@@ -90,6 +95,7 @@
   - priority (NORMAL/COURSE)
   - approved_by (admin_id, nullable)
   - approved_at, cancel_reason
+  - is_deleted (0/1)
   - created_at, updated_at
 
 - reservation_series（多次预约批次）
@@ -98,13 +104,16 @@
   - rule_type (DAILY/WEEKLY/CUSTOM)
   - rule_value (例如周几、间隔等 JSON)
   - mode (STRICT/PARTIAL)
-  - created_at
+  - is_deleted (0/1)
+  - created_at, updated_at
 
 - reservation_series_items（多次预约明细）
   - id (PK)
   - series_id
   - reservation_id
   - status
+  - is_deleted (0/1)
+  - created_at, updated_at
 
 ### 4.6 审批与审计
 - approvals
@@ -113,7 +122,8 @@
   - action (APPROVE/REJECT/OVERRIDE)
   - reason
   - operator_id
-  - created_at
+  - is_deleted (0/1)
+  - created_at, updated_at
 
 - audit_logs
   - id (PK)
@@ -121,7 +131,8 @@
   - action
   - target_type, target_id
   - detail (JSON)
-  - created_at
+  - is_deleted (0/1)
+  - created_at, updated_at
 
 ### 4.7 通知
 - notifications
@@ -130,7 +141,17 @@
   - type
   - content
   - status (UNREAD/READ)
-  - created_at
+  - is_deleted (0/1)
+  - created_at, updated_at
+
+### 4.8 规则配置
+- rule_configs
+  - id (PK)
+  - key_name
+  - value (JSON)
+  - description
+  - is_deleted (0/1)
+  - created_at, updated_at
 
 ## 5. 状态机设计
 ### 5.1 实验室状态
