--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -7,7 +7,7 @@
 - 时间：统一 UTC 入库与计算，前端展示转本地时区；精度到分钟。
 - 主键：BIGINT 自增。
 - 状态字段：使用 VARCHAR/ENUM（本文用 VARCHAR 标注，便于迁移）。
-- 软删除：不启用软删除，使用 status 字段管理业务可见性。
+- 软删除：统一使用 is_deleted 字段（0/1），业务查询默认过滤 is_deleted=0。
 - 规范：created_at/updated_at 统一维护。
 
 ## 2. 实体关系概览
@@ -33,6 +33,7 @@
 - phone VARCHAR(32) UNIQUE NULL
 - role VARCHAR(16) NOT NULL  -- ADMIN/TEACHER/STUDENT
 - status VARCHAR(16) NOT NULL DEFAULT 'ACTIVE'  -- ACTIVE/DISABLED
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
@@ -53,6 +54,7 @@
 - open_time_start TIME NOT NULL
 - open_time_end TIME NOT NULL
 - status VARCHAR(16) NOT NULL DEFAULT 'IDLE'  -- IDLE/RESERVED/IN_USE/MAINTENANCE/DISABLED
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
@@ -67,6 +69,7 @@
 - name VARCHAR(128) NOT NULL
 - model VARCHAR(128) NULL
 - status VARCHAR(16) NOT NULL DEFAULT 'IDLE'  -- IDLE/RESERVED/IN_USE/MAINTENANCE/RETIRED
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
@@ -85,6 +88,7 @@
 - student_count INT NOT NULL
 - term VARCHAR(64) NOT NULL
 - created_by BIGINT NOT NULL  -- teacher_id
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
@@ -110,6 +114,7 @@
 - approved_by BIGINT NULL
 - approved_at DATETIME NULL
 - cancel_reason VARCHAR(255) NULL
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
@@ -138,7 +143,9 @@
 - rule_type VARCHAR(16) NOT NULL  -- DAILY/WEEKLY/CUSTOM
 - rule_value JSON NOT NULL  -- 周几、间隔、次数等
 - mode VARCHAR(16) NOT NULL  -- STRICT/PARTIAL
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
+- updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 约束
 - FK reservation_series.requester_id -> users.id
@@ -152,6 +159,9 @@
 - series_id BIGINT NOT NULL
 - reservation_id BIGINT NOT NULL
 - status VARCHAR(16) NOT NULL
+- is_deleted TINYINT NOT NULL DEFAULT 0
+- created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
+- updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 约束
 - FK reservation_series_items.series_id -> reservation_series.id
@@ -168,7 +178,9 @@
 - action VARCHAR(16) NOT NULL  -- APPROVE/REJECT/OVERRIDE
 - reason VARCHAR(255) NULL
 - operator_id BIGINT NOT NULL
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
+- updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 约束
 - FK approvals.reservation_id -> reservations.id
@@ -186,7 +198,9 @@
 - target_type VARCHAR(32) NOT NULL
 - target_id BIGINT NOT NULL
 - detail JSON NULL
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
+- updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 约束
 - FK audit_logs.actor_id -> users.id
@@ -202,7 +216,9 @@
 - type VARCHAR(32) NOT NULL
 - content VARCHAR(512) NOT NULL
 - status VARCHAR(16) NOT NULL DEFAULT 'UNREAD'  -- UNREAD/READ
+- is_deleted TINYINT NOT NULL DEFAULT 0
 - created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
+- updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 约束
 - FK notifications.user_id -> users.id
@@ -217,6 +233,8 @@
 - key_name VARCHAR(64) NOT NULL
 - value JSON NOT NULL
 - description VARCHAR(255) NULL
+- is_deleted TINYINT NOT NULL DEFAULT 0
+- created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
 - updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
 
 索引
@@ -258,4 +276,3 @@
 ## 7. 初始化与迁移建议
 - 优先使用 Flyway 或 Liquibase 管理迁移。
 - 建议预置 role 与基础规则配置（rule_configs）。
-
