检查项目是否达标

--- a/docs/后端设计文档.md
+++ b/docs/后端设计文档.md
@@ -44,6 +44,7 @@
 - users
   - id (PK)
   - name, email, phone
+  - password_hash
   - role (ADMIN/TEACHER/STUDENT)
   - status (ACTIVE/DISABLED)
   - is_deleted (0/1)
@@ -247,6 +248,8 @@
 - JWT 解析与资源服务器校验。
 - 方法级别权限（如 @PreAuthorize）。
 - 关键操作（审批/覆盖/停用）写审计日志。
+- RBAC：管理员可管理资源/审批；教师可创建课程/多次预约；学生仅可创建与管理本人预约。
+- 认证：除登录外接口需携带 Bearer Token，服务端从 JWT 中解析用户与角色信息。
 
 ## 10. 错误码与响应
 - 统一错误响应格式：code/message/details。
