--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -31,6 +31,7 @@
 - name VARCHAR(64) NOT NULL
 - email VARCHAR(128) UNIQUE NULL
 - phone VARCHAR(32) UNIQUE NULL
+- password_hash VARCHAR(255) NULL
 - role VARCHAR(16) NOT NULL  -- ADMIN/TEACHER/STUDENT
 - status VARCHAR(16) NOT NULL DEFAULT 'ACTIVE'  -- ACTIVE/DISABLED
 - is_deleted TINYINT NOT NULL DEFAULT 0
@@ -259,6 +260,7 @@
 - 设备级预约需审批；实验室级普通预约自动通过。
 - 取消/修改时间窗：教师 ≥ 12 小时，学生 ≥ 24 小时。
 - 资源维护/停用状态不得创建预约（业务层拦截）。
+- 业务查询默认过滤 is_deleted = 0。
 
 ## 6. 数据字典（状态枚举）
 - labs.status: IDLE/RESERVED/IN_USE/MAINTENANCE/DISABLED
